--- a/crudapp/home/templates/delete.html
+++ b/crudapp/home/templates/delete.html
@@ -11,7 +11,7 @@
         <input type="submit">
     </form>
     <a href="/get">Read</a>
-    <a href="/create">create</a>
+    <a href="/">create</a>
     <a href="/update">update</a>
     <a href="/delete">delete</a>
 </body>
