--- a/crudapp/home/templates/read.html
+++ b/crudapp/home/templates/read.html
@@ -11,7 +11,7 @@
         <li>age:-{{item.age}}</li>
     {% endfor %}
     <a href="/get">Read</a>
-    <a href="/create">create</a>
+    <a href="/">create</a>
     <a href="/update">update</a>
     <a href="/delete">delete</a>
 </body>
