--- a/crudapp/home/templates/create.html
+++ b/crudapp/home/templates/create.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Create</h1>
-    <form method="POST" action="/create">
+    <form method="POST" action="/">
         {% csrf_token %}
         <input type="text" name="name">
         <input type="text" name="age">
